fix(hydration): fixing hypdration collapse

--- a/src/app/(collections)/[collection]/Collections.module.scss
+++ b/src/app/(collections)/[collection]/Collections.module.scss
@@ -28,7 +28,7 @@
 }
 
 /* Per-Route Hero Backgrounds */
-.hero-festival {
+.hero-festivals {
   background-image: url("/images/festivals/hero.png");
 }
 .hero-community {
@@ -73,7 +73,7 @@
 }
 
 /* Frame Color Variants */
-.frameFestival {
+.frameFestivals {
   background-color: $color-teal;
 }
 .frameCommunity {
